Updates from Overleaf

--- a/refs.bib
+++ b/refs.bib
@@ -2128,3 +2128,64 @@ archivePrefix = {arXiv},
   pages={472--478},
   year={2001}
 }
+
+@article{sefusatti_2009,
+doi = {10.1088/1475-7516/2009/12/022},
+url = {https://dx.doi.org/10.1088/1475-7516/2009/12/022},
+year = {2009},
+month = {dec},
+publisher = {},
+volume = {2009},
+number = {12},
+pages = {022},
+author = {Emiliano Sefusatti and  Michele Liguori and  Amit P.S. Yadav and  Mark G. Jackson and  Enrico Pajer},
+title = {Constraining running non-gaussianity},
+journal = {Journal of Cosmology and Astroparticle Physics},
+abstract = {The primordial non-Gaussian parameter fNL has been shown to be scale-dependent in several models of inflation with a variable speed of sound, such as Dirac-Born-Infeld (DBI) models. We perform a Fisher matrix analysis of the bispectra of the temperature and polarization of the Cosmic Microwave Background (CMB) radiation and derive the expected constraints on the parameter nNG that quantifies the running of fNL(k) for current and future CMB missions. We find that CMB information alone, in the event of a significant detection of the non-Gaussian component, corresponding to fNL = 50 for the local model and  fNL = 100 for the equilateral model of non-Gaussianity, is able to determine nNG with a 1-σ uncertainty of nNG ≃ 0.1 and ΔnNG ≃ 0.3, respectively, for the Planck mission and a factor of two better for CMBPol. In addition, we show how future large-scale structure observations should achieve results comparable to or even better than those from the CMB, while showing some complementarity due to the different distribution of the non-Gaussian signal over the relevant range of scales. Finally, we compare our findings to the predictions on the amplitude and running of non-Gaussianity of DBI inflation, showing how the constraints on a scale-dependent  fNL(k) translate into constraints on the parameter space of the theory.}
+}
+
+@article{becker_2011,
+doi = {10.1088/1475-7516/2011/01/006},
+url = {https://dx.doi.org/10.1088/1475-7516/2011/01/006},
+year = {2011},
+month = {jan},
+publisher = {},
+volume = {2011},
+number = {01},
+pages = {006},
+author = {Adam Becker and  Dragan Huterer and  Kenji Kadota},
+title = {Scale-dependent non-Gaussianity as a generalization of the local model},
+journal = {Journal of Cosmology and Astroparticle Physics},
+abstract = {We generalize the local model of primordial non-Gaussianity by promoting the parameter fNL to a general scale-dependent function fNL(k). We calculate the resulting bispectrum and the effect on the bias of dark matter halos, and thus the extent to which fNL(k) can be measured from the large-scale structure observations.  By calculating the principal components of fNL(k), we identify scales where this form of non-Gaussianity is best constrained and estimate the overlap with previously studied local and equilateral non-Gaussian models.}
+}
+
+
+@ARTICLE{postman1984ApJ...281...95P,
+       author = {{Postman}, M. and {Geller}, M.~J.},
+        title = "{The morphology-density relation - The group connection.}",
+      journal = {\apj},
+     keywords = {Galactic Clusters, Galactic Evolution, Galactic Structure, Space Density, Collapse, Cosmology, Elliptical Galaxies, Red Shift, Astrophysics},
+         year = 1984,
+        month = jun,
+       volume = {281},
+        pages = {95-99},
+          doi = {10.1086/162078},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1984ApJ...281...95P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{kauffmann,
+    author = {Kauffmann, Guinevere and White, Simon D. M. and Heckman, Timothy M. and Ménard, Brice and Brinchmann, Jarle and Charlot, Stéphane and Tremonti, Christy and Brinkmann, Jon},
+    title = "{The environmental dependence of the relations between stellar mass, structure, star formation and nuclear activity in galaxies}",
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {353},
+    number = {3},
+    pages = {713-731},
+    year = {2004},
+    month = {09},
+    abstract = "{We use a complete sample of galaxies drawn from the Sloan Digital Sky Survey to study how structure, star formation and nuclear activity depend on local density and on stellar mass. Local density is estimated by counting galaxies above a fixed absolute magnitude limit within cylinders 2 Mpc in projected radius and ±500 km s−1 in depth. The stellar mass distribution of galaxies shifts by almost a factor of two towards higher masses between low- and high-density regions. At fixed stellar mass both star formation and nuclear activity depend strongly on local density, while structural parameters such as size and concentration are almost independent of it. Only for low-mass galaxies (M* \\&lt; 3 × 1010 M⊙, where M*= stellar mass) do we find a weak shift towards greater concentration and compactness in the highest-density regions. The galaxy property most sensitive to environment is specific star formation rate (SFR). For galaxies with stellar masses in the range 1010–3 × 1010 M⊙, the median SFR/M* decreases by more than a factor of 10 as the population shifts from predominantly star-forming at low densities to predominantly inactive at high densities. This decrease is less marked, but still significant, for high-mass galaxies. Galaxy properties that are associated with star formation correlate strongly with local density. At fixed stellar mass twice as many galaxies host active galactic nuclei (AGNs) with strong [O iii] emission in low-density regions as in high. Massive galaxies in low-density environments also contain more dust. To gain insight into the processes that shut down star formation, we analyse correlations between spectroscopic indicators that probe the star formation history (SFH) on different time-scales: the λ4000 break strength, the Balmer-absorption index HδA, and the specific SFR/M*. The correlations between these indicators do not depend on environment, suggesting that the decrease in star formation activity in dense environments occurs over long (\\&gt;1-Gyr) time-scales. Since structure does not depend on environment for galaxies with masses greater than 3 × 1010 M⊙, the trends in recent SFH, dust and nuclear activity in these systems cannot be driven by processes that alter structure, for example mergers or harassment. The SFH–density correlation is strongest for small-scale estimates of local density. We see no evidence that star formation history depends on environment more than 1 Mpc from a galaxy. Finally, we highlight a striking similarity between the changes in the galaxy population as a function of density and as a function of redshift. We use mock catalogues derived from N-body simulations to explain how this may be understood.}",
+    issn = {0035-8711},
+    doi = {10.1111/j.1365-2966.2004.08117.x},
+    url = {https://doi.org/10.1111/j.1365-2966.2004.08117.x},
+    eprint = {https://academic.oup.com/mnras/article-pdf/353/3/713/4862464/353-3-713.pdf},
+}
