--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -25,13 +25,12 @@ The estimator in Equation \ref{eq:pusedocell} yields a biased power spectrum whe
   
 The other theoretical systematic issues are however subdominant in the angular power spectrum. For instance, relativistic effects generate PNG-like scale-dependent signatures on large scales, which interfere with measuring $\fnl$ with the scale-dependent bias effect using higher order multipoles of the 3D power spectrum \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey size, known as super-sample modes, modulate the galaxy 3D power spectrum \citep{castorina2020JCAP}. In a similar way, the peculiar motion of the observer can mimic a PNG-like scale-dependent signature through aberration, magnification and the Kaiser-Rocket effect, i.e., a systematic dipolar apparent blue-shifting in the direction of the observer's peculiar motion \citep{2021JCAP...11..027B}.
   
-\subsubsection{Angular power spectrum}
-\mr{Santi: would nonlinear power spectrum matter? MR: Somewhere here we should mention that the nonlinear P(k) matter does not matter, as those scales are not used. Maybe provide a reference. I can also re-run using a nonlinear P(k).} 
+\subsubsection{Angular power spectrum} 
 The relationship between the linear matter power spectrum $P(k)$ and the projected angular power spectrum of galaxies is expressed by the following equation:
 \begin{equation}\label{eq:cell}
 C_{\ell} = \frac{2}{\pi}\int_{0}^{\infty}\frac{dk}{k}k^{3}P(k)|\Delta_{\ell}(k)|^{2} + N_{\rm shot},
 \end{equation}
-where $N_{\rm shot}$ is a scale-independent shot noise term. The projection kernel $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k)$ includes redshift space distortions and determines the contribution of each wavenumber $k$ to the galaxy power spectrum on mode $\ell$. For more details, refer to \cite{Padmanabhan2007}. The FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} are employed to calculate the integrals for the projection kernel $\Delta_{\ell}(k)$, which includes the $l^{\rm th}$ order spherical Bessel functions, $ j_{\ell}(kr)$, and its second derivatives,
+where $N_{\rm shot}$ is a scale-independent shot noise term. The projection kernel $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k)$ includes redshift space distortions and determines the contribution of each wavenumber $k$ to the galaxy power spectrum on mode $\ell$. For more details on this estimator, refer to \cite{Padmanabhan2007}. \mr{The non-linearities in the matter power spectrum are negligible for the scales of interest \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For $\ell=40$, $\Delta_{\ell}(k)$ peaks at $k\sim 0.02~ h\text{Mpc}^{-1}$, which is above the non-linear regime.} The FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} are employed to calculate the integrals for the projection kernel $\Delta_{\ell}(k)$, which includes the $l^{\rm th}$ order spherical Bessel functions, $ j_{\ell}(kr)$, and its second derivatives,
 \begin{align}
     \Delta^{\rm g}_{\ell}(k) &= \int \frac{dr}{r} r (b+\Delta b) D(r) \frac{dN}{dr} j_{\ell}(kr),\\
     \Delta^{\rm RSD}_{\ell}(k) &= - \int \frac{dr}{r} r f(r) D(r) \frac{dN}{dr} j^{\prime\prime}_{\ell}(kr),
@@ -46,7 +45,7 @@ where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnot
 \begin{figure}
 \centering
 \includegraphics[width=0.45\textwidth]{model_mock.pdf}
-\caption{\mr{Figure is updated to address ''I did not see the light shading at first, it is so light''.} The mean power spectrum from the $\fnl=0$ mocks (no contamination) and best-fitting theoretical prediction after accounting for the survey geometry and integral constraint effects. The dark and light shades represent the $68\%$ error on the mean and one realization, respectively. Bottom panel shows the residual power spectrum relative to the mean power spectrum. No imaging systematic cleaning is applied to these mocks.}\label{fig:model_mock}
+\caption{\mr{MR: \textit{Figure is updated to address ''I did not see the light shading at first, it is so light''}.} The mean power spectrum from the $\fnl=0$ mocks (no contamination) and best-fitting theoretical prediction after accounting for the survey geometry and integral constraint effects. The dark and light shades represent the $68\%$ error on the mean and one realization, respectively. Bottom panel shows the residual power spectrum relative to the mean power spectrum. No imaging systematic cleaning is applied to these mocks.}\label{fig:model_mock}
 \end{figure}
 
 \subsubsection{Survey geometry and integral constraint}
@@ -111,7 +110,7 @@ It is imperative to note that these sets are selected prior to examining the aut
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{nbar_mocks.pdf}
-\caption{\mr{DF: Again, this seems to show that you have a larger (uncorrected) galaxy density when there is more dust (the black line), which is hard to understand. Unless more dust = low latitude = more stellar confusion. The correlation with nStar is obviously positive (panel 2) and nStar certainly correlates with EBV.} The mean density contrast of the DESI LRG targets as a function of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the results before imaging systematic correction. \mr{The red, blue and orange curves represent the relationships after applying the imaging weights from the linear models trained with \textit{two maps}, \textit{three maps}, and \textit{eight maps}, respectively}. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $68\%$ dispersion of 1000 lognormal mocks with $\fnl=0$ and $76.9$, respectively.}\label{fig:nbarmock}
+\caption{The mean density contrast of the DESI LRG targets as a function of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the results before imaging systematic correction. \mr{The red, blue and orange curves represent the relationships after applying the imaging weights from the linear models trained with \textit{two maps}, \textit{three maps}, and \textit{eight maps}, respectively}. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $68\%$ dispersion of 1000 lognormal mocks with $\fnl=0$ and $76.9$, respectively.}\label{fig:nbarmock}
 \end{figure*}
 
 
@@ -156,9 +155,13 @@ and the total residual error as,
 \end{equation}
 where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however, a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (\mr{red dashed curve}), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations \mr{in the low end of depth$_{z}$ and around $1\%$ in the high end of psfsize$_{z}$}\mout{, in the z band}, which implies \mr{the presence of} nonlinear systematic effects \mout{exist}. We find that the imaging weights from the nonlinear model trained with the three identified maps (or four maps including the stellar density) \mout{is}\mr{are} capable of reducing the fluctuations below $2\%$. Even with the nonlinear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
 
-\mr{DH: nothing incorrect here (apart from the comment just above), but the text just seems tedious and maybe repetitive, with lots of numbers thrown around. It would be good to give it a more streamlined rewrite. Lines 798-808 are particularly in need of a reform}. Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cross spectrum (top) and mean density contrast (bottom) statistics which are obtained from the $\fnl=0$ and $76.9$ lognormal mocks, respectively with solid and dashed lines. The $\chi^{2}$ tests \mout{prove}\mr{turn out} to be insensitive to the true $\fnl$ of the mocks, as we obtain consistent distributions for both statistics, regardless of the true $\fnl$ used for the mock generation. \mr{This provides a robust metric to separate the effect of the systematics from the effect of cosmology.} No mitigation is applied to these mocks, and thus the $\chi^{2}$ values are expected to be unbiased. The $\chi^{2}$ values observed in the DESI LRG targets are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The corresponding $p$-values are inferred from the comparison to the clean $\fnl=0$ mocks. Before cleaning, our LRG sample has a cross power spectrum's $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross power spectrum's $\chi^{2}$ is reduced to $375.1$ with $p$-value \mr{$< 0.001$}. Adding the r-band psfsize, the linear three maps approach reduces the $\chi^{2}$ down to $195.9$ with $p$-value $=0.04$; however, we can reject the null hypothesis that our sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though cleaning with linear all maps gives the lowest cross power spectrum's $\chi^{2}$ of $129.2$ (and $p$-value $=0.24$), it potentially makes the analysis more prone to regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum's $\chi^{2}$ is reduced to $79.3$ with $p$-value $=0.59$. Adding the stellar density map reduces the cross power spectrum's $\chi^{2}$ error to $70.9$ ($p$-value $=0.69$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
+\mr{Figure \ref{fig:chi2test} presents $\chi^{2}$ histograms for the normalized cross spectrum (top) and mean density contrast (bottom) statistics obtained from lognormal mocks with different $\fnl$ values. The $\chi^{2}$ tests are insensitive to $\fnl$, providing consistent distributions regardless of its value that was used for mock generation, and thus these tests help separate systematics from cosmology. No mitigation is applied to the mocks, ensuring unbiased $\chi^{2}$ values. DESI LRG target $\chi^{2}$ values are compared via the vertical lines and summarized in Table \ref{tab:chi2test}.}
 
+\mr{After cleaning, the cross power spectrum's $\chi^{2}$ is reduced. However, linear three maps approach fails to clean the data properly at $95\%$ confidence ($\chi^{2}=195.9$ and $p$-value $< 0.04$). Alternative nonlinear three maps approach reduces $\chi^{2}$ significantly with $p$-value$=0.59$, supporting the need for nonlinear cleaning. For this test, we only use multipoles for up to $\ell=20$, and we find no remaining systematic errors by investigating at higher multipoles (see Appendix \ref{sec:scalesys}). We observe similar performance in the mean density test. The \textit{linear two maps} weights reduce the $\chi^{2}$ from $679.8$ to $178.8$, but significant systematics remain ($p$-value $<0.001$). Applying the linear three maps approach lowers the error to $\chi^{2}=130$, yet systematics remain significant ($p$-value $<0.001$). Cleaning with linear eight maps results in $\chi^{2}=90$ and $p$-value $=0.08$, but using too many imaging maps increases the risk of removing the true clustering signal. Alternatively, using imaging weights from the \textit{nonlinear three maps} approach yields $\chi^{2}=74.3$ and $p$-value $=0.39$. Adding the stellar density map (\textit{nonlinear four maps}) slightly improves the results: $\chi^{2}=73.2$ and $p$-value $=0.42$. The small impact on $\chi^{2}$ suggests that the stellar density trend can be explained by extinction due to the correlation between these properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light.} 
 
+\mr{The tests conducted here demonstrate the effectiveness of various cleaning approaches for the LRG sample without revealing the measured power spectrum or $\fnl$ constraints. Results summarized in Table \ref{tab:chi2test} show that cleaning with nonlinear three maps consistently produces $\chi^{2}$ values similar to clean mocks with reasonable $p$-values ($=0.39$ for mean density and $=0.59$ for cross power spectrum). On the other hand, the linear three maps approach fails to sufficiently mitigate systematics, as evidenced by low $p$-values ($< 0.001$ for mean density and $=0.04$ for cross power spectrum). Considering $p=0.05$ as a threshold for clean maps, the nonlinear three maps approach is optimal, as adding more imaging systematics maps may exacerbate over-correction issues.}
+
+%Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cross spectrum (top) and mean density contrast (bottom) statistics which are obtained from the $\fnl=0$ and $76.9$ lognormal mocks, respectively with solid and dashed lines. The $\chi^{2}$ tests \mout{prove}\mr{turn out} to be insensitive to the true $\fnl$ of the mocks, as we obtain consistent distributions for both statistics, regardless of the true $\fnl$ used for the mock generation. \mr{These tests provide robust metrics to separate the effect of the systematics from the effect of cosmology.} No mitigation is applied to these mocks, and thus the $\chi^{2}$ values are expected to be unbiased. The $\chi^{2}$ values observed in the DESI LRG targets are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The corresponding $p$-values are inferred from the comparison to the clean $\fnl=0$ mocks. Before cleaning, our LRG sample has a cross power spectrum's $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross power spectrum's $\chi^{2}$ is reduced to $375.1$ with $p$-value \mr{$< 0.001$}. Adding the r-band psfsize, the linear three maps approach reduces the $\chi^{2}$ down to $195.9$ with $p$-value $=0.04$; however, we can reject the null hypothesis that our sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though cleaning with linear all maps gives the lowest cross power spectrum's $\chi^{2}$ of $129.2$ (and $p$-value $=0.24$), it potentially makes the analysis more prone to regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum's $\chi^{2}$ is reduced to $79.3$ with $p$-value $=0.59$. Adding the stellar density map reduces the cross power spectrum's $\chi^{2}$ error to $70.9$ ($p$-value $=0.69$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
 
 \begin{table}
   \caption{Mean density and cross power spectrum $\chi^{2}$ and $p$-values that are inferred from the comparison to the $\fnl=0$ clean mocks.}\label{tab:chi2test}
@@ -180,9 +183,9 @@ where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is 
   \end{tabular}
 \end{table}
 
-Figure \ref{fig:chi2test} (bottom) shows the mean galaxy density's $\chi^{2}$ observed in the mocks with or without $\fnl$. Similar \mout{to}\mr{as in} the cross power spectrum test, we find consistent results for the mean density diagnostic regardless of the underlying true $\fnl$, which supports \mr{the finding} that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DESI LRG targets before and after applying imaging weights are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The \textit{linear two maps} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The $p$-value $<0.001$ indicates severe remaining systematic effects. Adding the r-band psfsize reduces the error to $\chi^{2}=130$ but the remaining systematics remain statistically significant with $p$-value $<0.001$. Training the linear model with all imaging systematic maps returns a more reasonable $\chi^{2}=90$ and $p$-value of $0.08$. However, as noted earlier, regression with all imaging systematic maps as input can lead to the removal of the true clustering signal. On the other hand, we obtain a $\chi^{2}$ value of $74.3$ with $p$-value $=0.39$ with the imaging weights from the \textit{nonlinear three maps} approach. Re-training the nonlinear approach while adding the stellar density map (\textit{nonlinear four maps}) yields minor improvement: $\chi^{2}=73.2$ and $p$-value $=0.42$. The minor impact on $\chi^{2}$ indicates that the stellar density trend in the mean LRG density can be explained via extinction because of the strong correlation between these two properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light.
+%Figure \ref{fig:chi2test} (bottom) shows the mean galaxy density's $\chi^{2}$ observed in the mocks with or without $\fnl$. Similar \mout{to}\mr{as in} the cross power spectrum test, we find consistent results for the mean density diagnostic regardless of the underlying true $\fnl$, which supports \mr{the finding} that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DESI LRG targets before and after applying imaging weights are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The \textit{linear two maps} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The $p$-value $<0.001$ indicates severe remaining systematic effects. Adding the r-band psfsize reduces the error to $\chi^{2}=130$ but the remaining systematics remain statistically significant with $p$-value $<0.001$. Training the linear model with all imaging systematic maps returns a more reasonable $\chi^{2}=90$ and $p$-value of $0.08$. However, as noted earlier, regression with all imaging systematic maps as input can lead to the removal of the true clustering signal. On the other hand, we obtain a $\chi^{2}$ value of $74.3$ with $p$-value $=0.39$ with the imaging weights from the \textit{nonlinear three maps} approach. Re-training the nonlinear approach while adding the stellar density map (\textit{nonlinear four maps}) yields minor improvement: $\chi^{2}=73.2$ and $p$-value $=0.42$. The minor impact on $\chi^{2}$ indicates that the stellar density trend in the mean LRG density can be explained via extinction because of the strong correlation between these two properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light.
 
-The mean density contrast and cross power spectrum tests presented here show the effectiveness of the different cleaning approaches for the LRG sample before measuring the galaxy power spectrum and using it to constrain $\fnl$. In other words, none of these tests require unblinding the measured power spectrum or $\fnl$ constraints. As summarized in Table \ref{tab:chi2test}, the results of these tests reveal that cleaning the LRG sample with nonlinear three maps produces statistically consistent $\chi^{2}$ values with the clean mocks, regardless of the true $\fnl$ used in the generation of the mocks. \mr{HJ: there are no clear indications for the need to add the fourth map.} Moreover, we should not select the model with four maps, which includes stellar density, as our best model to avoid the confirmation bias, since we do not have other indicators showing this model is more reasonable than the one with three maps. On the other hand, \mr{considering $p=0.05$ as our threshold for clean maps,} the linear three maps approach is not able to thoroughly mitigate systematics, as characterised by $p$-value \mr{$< 0.001$} and $=0.04$, respectively, for the mean density and cross power spectrum diagnostics. Based on these findings, we identify nonlinear three maps as the optimal cleaning approach for the LRG sample and the rest of this manuscript, because including any additional imaging systematics maps could potentially further complicate the over-correction issue.
+% The mean density contrast and cross power spectrum tests presented here show the effectiveness of the different cleaning approaches for the LRG sample before measuring the galaxy power spectrum and using it to constrain $\fnl$. In other words, none of these tests require unblinding the measured power spectrum or $\fnl$ constraints. As summarized in Table \ref{tab:chi2test}, the results of these tests reveal that cleaning the LRG sample with nonlinear three maps produces statistically consistent $\chi^{2}$ values with the clean mocks, regardless of the true $\fnl$ used in the generation of the mocks. \mr{HJ: there are no clear indications for the need to add the fourth map.} Moreover, we should not select the model with four maps, which includes stellar density, as our best model to avoid the confirmation bias, since we do not have other indicators showing this model is more reasonable than the one with three maps. On the other hand, \mr{considering $p=0.05$ as our threshold for clean maps,} the linear three maps approach is not able to thoroughly mitigate systematics, as characterised by $p$-value \mr{$< 0.001$} and $=0.04$, respectively, for the mean density and cross power spectrum diagnostics. Based on these findings, we identify nonlinear three maps as the optimal cleaning approach for the LRG sample and the rest of this manuscript, because including any additional imaging systematics maps could potentially further complicate the over-correction issue.
 
 
 \subsection{Calibration of \mr{over-correction} \mout{mitigation bias}}\label{ssec:calibration}
