--- a/sections/results.tex
+++ b/sections/results.tex
@@ -1,12 +1,12 @@
 \section{Results}\label{sec:results}
 %\mr{Ashley: explain how the data is combined. Ashley: I think text on blinding could be more like "Our fiducial choice of the 3 map method and robustness tests on (list whatever would make sense at this point) were applied to the data to obtain fNL constraints with no mitigation bias correction and first without revealing the fNL values of the posterior likelihoods (only their relative shifts). After we chose the 3 map method as our fiducial method, we applied further robustness tests and derived the mitigation bias correction."}
-\mout{This section presents}\mr{We now present} our $\fnl$ constraints obtained from the power spectrum of the DESI LRG targets. The treatment of the imaging systematic effects is performed on each imaging region (BASS+MzLS, DECaLS North/South) separately. After cleaning, the regions are combined for the measurement of the power spectrum. We unblind the galaxy power spectrum and the $\fnl$ values after our cleaning methods are validated and vetted by the cross power spectrum and mean galaxy density diagnostics. We also conduct additional tests to check the robustness of our constraints against various assumptions, such as analyzing each region separately, applying cuts on imaging conditions, and changing the smallest mode used in fitting for $\fnl$. \mr{DF: Among the ~ infinite number of systematic map sets you could have tried would be one including stellar density squared. I could imagine that blends (two stars near each other that mimic a galaxy) could be labeled galaxies. Because this is a systematic caused by pairs of stars, it would enter proportional to density squared.}
+\mout{This section presents}\mr{We now present} our $\fnl$ constraints obtained from the power spectrum of the DESI LRG targets. The treatment of the imaging systematic effects is performed on each imaging region (BASS+MzLS, DECaLS North/South) separately. After cleaning, the regions are combined for the measurement of the power spectrum. We unblind the galaxy power spectrum and the $\fnl$ values after our cleaning methods are validated and vetted by the cross power spectrum and mean galaxy density diagnostics. We also conduct additional tests to check the robustness of our constraints against various assumptions, such as analyzing each region separately, applying cuts on imaging conditions, and changing the smallest mode used in fitting for $\fnl$.
 
 
 \begin{figure}
     \centering
     \includegraphics[width=0.47\textwidth]{figures/model_dr9.pdf} 
-    \caption{\mr{DH: what are the curves? Are they some fits through the points? Also the whole figure seems fuzzy - seems some kind of png file type issue, would be good to make it sharper.} \mr{DF: is rather scary. It feels like the conclusion should be that no $\ell<20$ can be trusted.} The angular power spectrum of the DESI LRG targets before (\textit{No weight}) and after correcting for imaging systematics using the linear and non-linear methods. \mr{The curves represent their corresponding best-fitting theory predictions}. The solid curve and grey shade respectively represent the mean power spectrum and $68\%$ error from the $\fnl=0$ mocks.}
+    \caption{The angular power spectrum of the DESI LRG targets before (\textit{No weight}) and after correcting for imaging systematics using the linear and non-linear methods. \mr{The curves represent the corresponding best-fitting theory predictions}. The solid curve and grey shade respectively represent the mean power spectrum and $68\%$ error from the $\fnl=0$ mocks.}
     \label{fig:cl_dr9}
 \end{figure}
 
